--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -65,6 +65,7 @@ $eventlist: (
   raid: rgb(251, 255, 43),
   sub: rgb(104, 104, 255),
   subgift: rgb(239, 59, 255),
+  subcommunitygift: rgb(255, 133, 214),
   resub: rgb(166, 41, 255),
   cheer: rgb(255, 200, 61),
   tip: rgb(100, 255, 53)
