--- a/scss/themes/light.scss
+++ b/scss/themes/light.scss
@@ -56,6 +56,7 @@ $eventlist: (
   raid: $yellow,
   sub: $blue,
   subgift: $green,
+  subcommunitygift: rgb(255, 96, 123),
   resub: indigo,
   cheer: goldenrod,
   tip: darkgreen
