--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1297,3 +1297,7 @@ blockquote {
 }
 
 .icon { position: absolute; top:0; right: 1rem; height: 100%; font-size: 1.4rem; }
+
+.small-spaced {
+  font-weight: bold; font-size: 11px; text-transform: uppercase; letter-spacing: 1px;
+}
