oauth: Add oauth settings into ui
Moved from config.json settings, while using refreshToken and accessToken
to properly refresh tokens

Closes #1107
Closes #1170

--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -107,3 +107,7 @@ $status-connecting-border: #fd7e14 !default;
 .progress-bar {
   color: white !important;
 }
+
+.border-gray, .border-input {
+  border-color: #868e96 !important
+}
