integrations move integrations to interface
PR https://github.com/sogehige/sogeBot/pull/1606

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,11 @@
+// transitions
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
+
 div.CodeMirror span.CodeMirror-matchingbracket {color: black !important; font-weight:bold;}
 
 // remove annoying button glow
@@ -1268,7 +1276,7 @@ blockquote {
   border-bottom-width: 3px;
 }
 
-.btn {
+.btn, .alert {
   font-family: 'PT Sans Narrow', sans-serif;
 }
 
